--- a/app/src/main/res/layout/activity_admin_user.xml
+++ b/app/src/main/res/layout/activity_admin_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.AdminUserActivity">
+    tools:context=".activity.admin.AdminUserActivity">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
